--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-Login==0.6.2
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
